[gd_scene load_steps=9 format=3 uid="uid://d042fo3u6q2js"]

[ext_resource type="Script" path="res://assets/scripts/player.gd" id="1_bxotv"]
[ext_resource type="Texture2D" uid="uid://cvjgi8vo8oycc" path="res://assets/images/player.png" id="2_s8xjh"]
[ext_resource type="PackedScene" uid="uid://cicxd7mijd8kl" path="res://scenes/entities/gun.tscn" id="3_75qve"]
[ext_resource type="Script" path="res://assets/scripts/health_comp.gd" id="4_o2kvo"]
[ext_resource type="Script" path="res://assets/scripts/fortificationPlacing.gd" id="5_b7mdj"]
[ext_resource type="PackedScene" uid="uid://brtvjf4h5v6uj" path="res://scenes/entities/wall.tscn" id="6_ldecn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_th127"]
radius = 7.07107

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knl6s"]
size = Vector2(12, 20)

[node name="Player" type="CharacterBody2D"]
position = Vector2(15, 10)
collision_mask = 3
script = ExtResource("1_bxotv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_th127")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_s8xjh")

[node name="gun" parent="." instance=ExtResource("3_75qve")]
position = Vector2(15, 0)

[node name="HealthComp" type="Node" parent="."]
script = ExtResource("4_o2kvo")

[node name="Holdable" type="Node2D" parent="."]
position = Vector2(18, 0)

[node name="Area2D" type="Area2D" parent="Holdable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Holdable/Area2D"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_knl6s")

[node name="fortification_placing" type="Node2D" parent="."]
script = ExtResource("5_b7mdj")
wall = ExtResource("6_ldecn")

[connection signal="area_entered" from="Holdable/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Holdable/Area2D" to="." method="_on_area_2d_area_exited"]
